# medical-rag

./: .gitignore  LICENSE  README.md  api_readme.md  environment.yml  run_api.py
src/: pyproject.toml  setup.py
src/MedicalRag/agent/: MedicalAgent.py  RagAgent.py  SearchGraph.py  utils.py
src/MedicalRag/agent/generator/: guardrails.py
src/MedicalRag/agent/retriever/: retrieval_tool.py
src/MedicalRag/agent/tools/: AgentTools.py  TencentSearch.py  __init__.py
src/MedicalRag/api/: app.py  auth.py  cli.py
src/MedicalRag/config/: annotation.yaml  app_config.yaml  default.yaml  default_cfg.py  defaults.yaml  ingestion.yaml  loader.py  milvus.yaml  milvus_cfg.py  models.py  models.yaml  prompts.py  rag.yaml  settings.py
src/MedicalRag/config/data/: annotator.py  annotator.yaml
src/MedicalRag/config/milvus/: app.yaml  (+3 more)
src/MedicalRag/core/: DBFactory.py  HybridRetriever.py  IngestionPipeline.py  KnowledgeBase.py  advanced_components.py  components.py  insert.py  utils.py
src/MedicalRag/data/: annotation.py
src/MedicalRag/embed/: bm25.py  sparse.py
src/MedicalRag/knowledge/: bm25.py  ingestion.py  sparse.py
src/MedicalRag/medicalrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/MedicalRag/observability/: metrics.py
src/MedicalRag/prompts/: templates.py
src/MedicalRag/rag/: MultiDialogueRag.py  RagBase.py  RagEvaluate.py  SimpleRag.py  basic_rag.py  utils.py
src/MedicalRag/schemas/: documents.py  metadata.py
src/MedicalRag/search/: RAG.py
src/MedicalRag/tools/: rag_search_tool.py  search.py
src/config/: extension.toml
(+212 files in other folders)
