[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medicalrag"
version = "0.1.0"
description = "A RAG framework for medical QA using LangChain and Milvus"
requires-python = ">=3.9"
authors = [
  { name = "weihua li", email = "zjl4376@gmail.com" }
]

# 运行时依赖（按需增删）
dependencies = [
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "pymilvus>=2.4.0",
  "pydantic>=2.5",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "typer>=0.12",
  "python-dotenv>=1.0",
  "tqdm>=4.66",
  "rich>=13.7",
  "tomli; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
  "mypy>=1.8",
  "black>=24.3",
  "isort>=5.13",
  "build>=1.2",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/yolo-hyl/medical-rag"
Repository = "https://github.com/yolo-hyl/medical-rag"
Issues = "https://github.com/yolo-hyl/medical-rag/issues"

# --- setuptools 专区：启用 src 布局的包发现 ---
[tool.setuptools]
package-dir = {"" = "MedicalRag"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["MedicalRag"]
